connecting to assets folder

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div class="container hidden">
         <div id="emoji-container">
-            <img id="emoji" src="happy-normal.svg" alt="Emoji">
+            <img id="emoji" src="./assets/happy-normal.svg" alt="Emoji">
         </div>
         <div class="output-area" id="output"></div>
         <div class="sender-area">
